# ats-cover-letter-generator

./: .dockerignore  .gitignore  .python-version  Dockerfile  LICENSE  README.md  deployment-guide.md  pyproject.toml  requirements.txt  ruff.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker-build.yml
.streamlit/: config.toml
src/ats_cover_letter_generator/: __init__.py  app.py  test_app.py
