[project]
name = "ats-cover-letter-generator"
version = "0.1.0"
description = "An AI-powered ATS-optimized cover letter generator."
readme = "README.md"
authors = [
    { name = "Mohammed Nasser Ahmed", email = "abunasserip@gmail.com" }
]
license = { text = "MIT" }
requires-python = "3.12"

dependencies = [
    "streamlit>=1.42.2",
    "ruff>=0.9.7",
    "pre-commit>=4.1.0",
    "requests>=2.32.3",
    "pymupdf>=1.25.3",
    "pillow>=11.1.0",
    "beautifulsoup4>=4.13.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "fpdf>=1.7.2",
    "python-dotenv>=1.0.1",
    "pandas>=2.2.3"
]

[project.scripts]
ats-cover-letter-generator = "ats_cover_letter_generator.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0",
    "mypy>=1.6.0",
    "flake8>=6.0.0",
    "isort>=5.12.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "ANN", "S", "B"]
ignore = ["E501"]  # Ignore line length warnings

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers"
